# YOLOV5_RKNN_ROS

./: CMakeLists.txt
include/: postprocess.h  yolov5_seg.h
model/: railway_11_labels_list.txt
src/: image_utils.c  main.cc  postprocess copy.cc  postprocess.cc  yolov5_seg.cc
video_publisher/devel/: .catkin  .rosinstall
video_publisher/devel/lib/my_video_publisher/: video_publisher_node
video_publisher/devel/lib/pkgconfig/: my_video_publisher.pc
video_publisher/devel/share/my_video_publisher/cmake/: my_video_publisherConfig.cmake
video_publisher/src/my_video_publisher/: CMakeLists.txt
video_publisher/src/my_video_publisher/src/: video_publisher_node.cpp
